  Swedish, Turkish and Ukrainian translations
! Some subtitle entries could have been missing depending on how they overlapped in time
! Ticket #2870, Fix rare visual glitches on status bar
! Ticket #3881, DXVA status was invalid with certain decoders
! Ticket #3981, Subtitle rendered: the blur filter was sometimes wrong on some part of the subpicture


1.7.2 - 26 January 2014
=======================
+ Added support for XySubFilter, only compatible with embedded subtitles for now
+ New option to auto-hide docked panels together with toolbars
+ Support pixel shader presets (with shortcuts and command line options)
+ Show more descriptive window title in capture mode
+ Ability to add all media files in folder from playlist panel context menu
+ New Croatian and Malay translations
+ Ticket #1556, Ability to move the player window by dragging the video area during DVD playback
+ Ticket #2251, Show hidden main menu with Alt key
+ Ticket #3235, Option to delay playback when auto-change fullscreen monitor mode feature is used
+ Ticket #3284, Option to auto-hide mouse pointer in windowed mode during playback
+ Ticket #3379, "Left Up" mouse keybinding now allows to move the player window by dragging the video area
+ Ticket #3614, Do medium jumps when pressing mouse navigation buttons on the seekbar
* Optimized subtitle renderer:
    - performance has been greatly improved both for subtitle parsing and rendering (often 5 times faster or more)
    - some subtitles which might have been missing before will now be displayed
* The storing mechanism of pixel shaders was redesigned:
    - each pixel shader is now stored in its own file with .hlsl extension
    - shader files are reloaded automatically when MPC-HC detects changes in them
    - internal pixel shader editor was removed, you're supposed to use specialized external
      editors from now on, but can still view compilation output in "Debug Shaders" window